Gradle 설정 변경 및 component scan 변경

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "org.springframework.boot" version "3.2.2"
     id "io.spring.dependency-management" version "1.1.4"
 }
+
 /* 전체 프로젝트 내 전체 모듈 공통설정 */
 allprojects {
     group = "com.flab"
@@ -17,6 +18,7 @@ allprojects {
         useJUnitPlatform()
     }
 }
+
 /* 하위 프로젝트 내 전체 모듈 공통설정 */
 subprojects {
     apply plugin: "java-library"
@@ -24,28 +26,21 @@ subprojects {
     apply plugin: "io.spring.dependency-management"
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+        implementation "org.springframework.boot:spring-boot-starter-data-jpa"
         implementation "org.springframework.boot:spring-boot-starter-web"
+        implementation "com.mysql:mysql-connector-j:8.0.31"
+        
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
+
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
+
         testImplementation "org.springframework.boot:spring-boot-starter-test"
-
-        testCompileOnly 'org.projectlombok:lombok:1.18.24'
-        testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
-
-        developmentOnly "org.springframework.boot:spring-boot-devtools"
-
-        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-        implementation("org.springframework.boot:spring-boot-starter-log4j2")
     }
-}
 
-project(":collaboshopping-api") {
-    dependencies {
-        implementation project(":collaboshopping-app")
-        implementation project(":collaboshopping-batch")
+    task("prepareKotlinBuildScriptModel")  {
+        // prevent intellij error
     }
 }
 
