--- a/collaboshopping-api/.gitignore
+++ b/collaboshopping-api/.gitignore
@@ -18,7 +18,7 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
-#.idea
+.idea
 *.iws
 *.iml
 *.ipr
@@ -35,3 +35,6 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### Frontend ###
+/collaboshopping-frontend/node_modules/*
