- 회원가입 기능 추가 - 로그인 처리 security 적용 중

--- a/collaboshopping-api/src/main/resources/application.yml
+++ b/collaboshopping-api/src/main/resources/application.yml
@@ -2,3 +2,10 @@ spring:
   profiles:
     include:
       - database
+cors:
+  allow:
+    origins: http://localhost:5173
+# JWT
+jwt:
+  issuer: test@test.com
+  secret_key: testProjectTestJwtProjectTest@Test.com/TestProjectTestJwtProjectTestTestTest
