--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,19 @@ subprojects {
 
         implementation "org.springframework.boot:spring-boot-starter-logging"
 
-        implementation "org.springframework.boot:spring-boot-starter-security"
-        /*implementation 'org.springframework.security:spring-security-config'*/
+
+        // 스프링 시큐리티
+        implementation 'org.springframework.boot:spring-boot-starter-security'
+        implementation 'org.springframework.security:spring-security-config'
+        implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+        // JWT
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+        testAnnotationProcessor 'org.projectlombok:lombok'
+        testImplementation 'org.projectlombok:lombok'
+
 
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
@@ -41,6 +52,7 @@ subprojects {
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
         testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
         testImplementation "org.springframework.boot:spring-boot-starter-test"
+        testImplementation 'org.springframework.security:spring-security-test'
     }
 
     task("prepareKotlinBuildScriptModel")  {
