- 로그인 인증 추가 - 로그인 jwt 처리 진행중

--- a/collaboshopping-api/src/main/resources/application.yml
+++ b/collaboshopping-api/src/main/resources/application.yml
@@ -7,5 +7,6 @@ cors:
     origins: http://localhost:5173
 # JWT
 jwt:
+  expiredMs: 60
   issuer: test@test.com
   secret_key: testProjectTestJwtProjectTest@Test.com/TestProjectTestJwtProjectTestTestTest
