--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ subprojects {
         testAnnotationProcessor 'org.projectlombok:lombok'
         testImplementation 'org.projectlombok:lombok'
 
+        implementation 'org.modelmapper:modelmapper:3.0.0'
+
 
         compileOnly "org.projectlombok:lombok"
         annotationProcessor "org.projectlombok:lombok"
