--- a/collaboshopping-api/src/main/resources/application.yml
+++ b/collaboshopping-api/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   profiles:
     include:
       - database
+  jpa:
+    hibernate:
+      ddl-auto: none
 cors:
   allow:
     origins: http://localhost:5173
